# INF8775-TP2

./: .gitignore  CMakeLists.txt  README.md  gen.sh  tp.sh  tp2.ipynb
analysis/: Simulations_outputs.md  data_drawer.ipynb  massive_run.py  mpstyle.py
analysis/config/: config.json
analysis/res/: approx.txt  dp.txt  greed.txt
archive_py/: tp2.ipynb  tp2.py
src/: algorithms.cpp  algorithms.hpp  main.cpp  point.cpp  point.hpp  renderer.cpp  renderer.hpp  structures.cpp  structures.hpp  utils.cpp  utils.hpp
